# Machine

./: CMakeLists.txt  README.md  settings.json  stamp.pl
perl-bridge/: CMakeLists.txt
perl-bridge/include/: perl_bridge.h
perl-bridge/src/: perl_bridge.c  perlxsi.c
src/: cache.hpp  cache_key.hpp  cache_key_tests.hpp  common.hpp  context.hpp  db.hpp  db_tests.hpp  function.hpp  hash.hpp  hash_tests.hpp  log.hpp  main.cpp  perl.hpp  processor.hpp  server.hpp  sql.hpp  test.cpp
test/: MachineCPP.t  database.sql
test/cache_test/: MachineCPPMemcache.t  MachineCPPSock.pm  ServerID.pm
test/cache_test/XPortal/: CachedObject.pm  Memcached.pm
test/cache_test/XPortal/CachedObject/: LibHouse.pm  Payments.pm  Reader.pm  Recenses.pm  Search.pm  User.pm
